import "data.proto";
import "const.proto";
import "excelconst.proto";
package Proto;


//---Nofity
//元素进入场景
message Notify_ElementJoinState
{
	required int32 Index;
}

//元素退出场景
message Notify_ElementExitState
{
	required int32 Index;
}

//创建一个释放者
message Notify_CreateReleaser
{
    required int32 Index;
	required int32 ReleaserIndex;
	required int32 TargetIndex;
	required string MagicKey;
	
}

//战斗中的角色
message Notify_CreateBattleCharacter
{
	required int32 Index;
	required int64 UserID;//用户ID
	required int32 ConfigID; //配表ID
	required int32 TeamIndex; //阵营ID
	required Vector3 Position;//位置
	required Vector3 Forward;//朝向
	required int32 Level; //等级
	required int32 HP;
	required int32 MP;
	repeated HeroProperty Properties;
	required DamageType TDamage; //伤害类型
	required DefanceType TDefance; //防御类型
	required HeroCategory Category;//英雄类型
	required string Name; //名字
	required float Speed;//移动速度
	repeated HeroMagicData Magics;
}

//创建一个飞行物
message Notify_CreateMissile
{
	required int32 Index;
	required int32 ReleaserIndex;
	required string ResourcesPath;
	required float Speed;//速度
	required Vector3 Position;
	required string formBone;
	required string toBone;
	required Vector3 offset;
}

enum MoveType
{
	NormalMove = 1;//普通移动
	Back =2;//后退
	Jump =3;//跳跃
}

message Notify_CharacterPosition
{
    required int32 Index;
	required Vector3 LastPosition;
	required Vector3 TargetPosition;
    required MoveType Type;//移动类型
}

message Notify_LayoutPlayMotion
{
	required int32 Index;
	required string Motion;
}

message Notify_LookAtCharacter
{
	required int32 Own;//源
	required int32 Target;//目标
}

message Notify_LayoutPlayParticle
{
	required int32 ReleaseIndex;
	required int32 FromTarget;
	required int32 ToTarget;
	required string FromBoneName;
	required string ToBoneName;
	required bool Bind;
	required int32 DestoryType;
	required float DestoryTime;
	required string Path;
}

//属性修改
message Notify_PropertyValue
{
	required int32 Index;
	required HeroPropertyType Type;
	required int32 FinallyValue;
}

//广播血量变化
message Notify_HPChange
{
	required int32 Index; 
	required int32 TargetHP; //最终HP 
	required int32 HP;//HP变化值
	required int32 Max;
}


message Notify_MPChange
{
	required int32 Index; 
	required int32 TargetMP; //最终MP 
	required int32 MP;//MP变化值
	required int32 Max;
}


message Notify_DamageResult
{
	required int32 Index;
	required int32 TargetIndex;
	required bool IsMissed;
	required int32 Damage;
}

message Notify_Drop
{
	required int32 Gold;
	repeated PlayerItem Items;
	required int64 UserID;
}

message Notify_PlayerJoinState
{
    required int64 UserID;
    required float TimeNow;
	required int32 Gold;
	required PlayerPackage Package;//道具列表
}

message Notify_ReleaseMagic
{
	required int32 Index;
	required float CdCompletedTime;
	required int32 MagicID;
}

message Notify_CharacterAlpha
{
	required int32 Index; //角色
	required float Alpha; //最终的Alpha
}

